The 9th task. Establishing a connection
